fix: correct text-align value in footer module
The text-align property value in the footer module was incorrectly set to '--text-align' instead of 'text-align'. This fixes that typo to properly align the text.

--- a/first-paint/src/v3/modules/_footer.scss
+++ b/first-paint/src/v3/modules/_footer.scss
@@ -37,7 +37,7 @@
 
   >div {
     font-size: var(--fs-3);
-    text-align: center;
+    --text-align: center;
   }
 
   @content;
